add btn contact for pricing

--- a/product.html
+++ b/product.html
@@ -147,9 +147,9 @@
             <div class="footer__bottom-bar">
             <p>© 2024 Skynetix Defense Technologies. Всі права захищені.</p>
             <div class="footer__policy-links">
-                <a href="#" class="footer__policy-link">Політика конфіденційності</a>
-                <a href="#" class="footer__policy-link">Умови використання</a>
-                <a href="#" class="footer__policy-link">Безпека</a>
+                <a href="./legal.html?page=privacy" class="footer__policy-link">Політика конфіденційності</a>
+                <a href="./legal.html?page=terms" class="footer__policy-link">Умови використання</a>
+                <a href="./legal.html?page=security" class="footer__policy-link">Безпека</a>
             </div>
             </div>
         </div>
