--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link id="favicon" rel="shortcut icon" href="./image/header/logo-skynetix-white.svg"> 
+    <link id="favicon" rel="shortcut icon" href="./image/header/logo-white.svg"> 
     <link rel="canonical" href="https://skynetix.com.ua">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,9 +31,11 @@
 <body>
     <header id="header">
         <nav>
-            <div class="logo"><img src="./image/header/logo-skynetix-white.svg" alt="Skynetix Logo"></div>
+             <a href="./index.html#hero" class="logo">
+                <img src="./image/header/logo-white.svg" alt="Skynetix Logo">
+             </a>
             <div class="nav-links">
-                <a href="./index.html" data-section="hero">Головна</a>
+                <a href="./index.html#hero" data-section="hero">Головна</a>
                 <a href="./index.html#about" data-section="about">Про нас</a>
 
                 <div style="position: relative;">
@@ -41,9 +43,9 @@
                         Продукція <i class="ri-arrow-down-s-line"></i>
                     </button>
                     <div class="dropdown-menu" id="productsDropdown">
-                        <a href="./product.html?product=drones"><i class="ri-flight-takeoff-line"></i> Дрони</a>
-                        <a href="./product.html?product=reb"><i class="ri-radar-line"></i> Системи РЕБ</a>
-                        <a href="./product.html?product=skynetix2"><i class="ri-battery-charge-line"></i> Skynetix 2 + АКБ</a>
+                        <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Авто / Багатоканальний РЕБ</a>
+                        <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Мобільні та персональні РЕБ</a>
+                        <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ для керування</a>
                     </div>
                 </div>
 
@@ -57,7 +59,7 @@
         </nav>
     </header>
     <div class="mobile-menu" id="mobileMenu">
-        <a href="./index.html" data-section="hero">Головна</a>
+        <a href="./index.html#hero" data-section="hero">Головна</a>
         <a href="./index.html#about" data-section="about">Про нас</a>
 
         <div>
@@ -65,9 +67,9 @@
             Продукція <i class="ri-arrow-down-s-line"></i>
         </button>
         <div class="mobile-products-list" id="mobileProductsList">
-            <a href="./product.html?product=drones"><i class="ri-flight-takeoff-line"></i> Дрони</a>
-            <a href="./product.html?product=reb"><i class="ri-radar-line"></i> Системи РЕБ</a>
-            <a href="./product.html?product=skynetix2"><i class="ri-battery-charge-line"></i> Skynetix 2 + АКБ</a>
+            <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Авто / Багатоканальний РЕБ</a>
+            <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Мобільні та персональні РЕБ</a>
+            <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ для керування</a>
         </div>
         </div>
 
@@ -83,22 +85,24 @@
 
             <!-- Блок компанії -->
             <div class="footer__company">
-                <div class="footer__logo"><img src="./image/header/logo-skynetix-white.svg" alt="Skynetix Logo"></div>
+                <div class="footer__logo">
+                    <img src="./image/header/logo-white.svg" alt="Skynetix Logo">
+                </div>
                 <p class="footer__description">
-                Провідна компанія у сфері оборонних технологій, що спеціалізується на передових дрон-системах,
+                Група компанії у сфері оборонних технологій, що спеціалізується на передових дрон-системах,
                 рішеннях у сфері радіоелектронної боротьби та сучасних енергетичних системах для військових і цивільних потреб.
                 </p>
                 <div class="footer__socials">
-                <a href="#" class="footer__social-link" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/feed/" class="footer__social-link" aria-label="LinkedIn">
                     <i class="ri-linkedin-line"></i>
                 </a>
-                <a href="#" class="footer__social-link" aria-label="Twitter">
+                <a href="https://x.com/" class="footer__social-link" aria-label="Twitter">
                     <i class="ri-twitter-line"></i>
                 </a>
-                <a href="#" class="footer__social-link" aria-label="Facebook">
+                <a href="https://www.facebook.com/" class="footer__social-link" aria-label="Facebook">
                     <i class="ri-facebook-line"></i>
                 </a>
-                <a href="#" class="footer__social-link" aria-label="YouTube">
+                <a href="https://www.youtube.com/" class="footer__social-link" aria-label="YouTube">
                     <i class="ri-youtube-line"></i>
                 </a>
                 </div>
@@ -108,11 +112,11 @@
             <div class="footer__links">
                 <h3 class="footer__title">Швидкі посилання</h3>
                 <ul class="footer__list">
-                <li><a href="./index.html" class="footer__link">Головна</a></li>
-                <li><a href="./index.html#about" class="footer__link">Про нас</a></li>
+                <li><a href="#hero" class="footer__link">Головна</a></li>
+                <li><a href="#about" class="footer__link">Про нас</a></li>
                 <li><a href="#" class="footer__link">Продукція</a></li>
-                <li><a href="./index.html#why-skynetix" class="footer__link">Чому Skynetix</a></li>
-                <li><a href="./index.html#contact" class="footer__link">Контакти</a></li>
+                <li><a href="#why-skynetix" class="footer__link">Чому Skynetix</a></li>
+                <li><a href="#contact" class="footer__link">Контакти</a></li>
                 </ul>
             </div>
 
@@ -120,9 +124,9 @@
             <div class="footer__links">
                 <h3 class="footer__title">Продукти</h3>
                 <ul class="footer__list">
-                    <li><a href="./product.html?product=drones" class="footer__link">Передові дрони</a></li>
-                    <li><a href="./product.html?product=reb" class="footer__link">Системи РЕБ</a></li>
-                    <li><a href="./product.html?product=skynetix2" class="footer__link">Skynetix 2 + АКБ</a></li>
+                    <li><a href="./product.html?product=multi" class="footer__link">Авто / Багатоканальний РЕБ</a></li>
+                    <li><a href="./product.html?product=mobile" class="footer__link">Мобільні та персональні РЕБ</a></li>
+                    <li><a href="./product.html?product=control" class="footer__link">ППРЧ для керування</a></li>
                 </ul>
             </div>
             </div>
@@ -135,7 +139,7 @@
             </div>
             <div class="footer__contact-item">
                 <i class="ri-phone-line footer__icon footer__icon--green"></i>
-                <a href="tel:+380677593174">+380 67 759 3174</a>
+                <a href="https://wa.me/380677593174">+380 67 759 3174</a>
             </div>
             <div class="footer__contact-item">
                 <i class="ri-time-line footer__icon footer__icon--purple"></i>
@@ -145,7 +149,7 @@
 
             <!-- Нижній рядок -->
             <div class="footer__bottom-bar">
-            <p>© 2024 Skynetix Defense Technologies. Всі права захищені.</p>
+            <p>© 2024 Skynetix. Всі права захищені.</p>
             <div class="footer__policy-links">
                 <a href="./legal.html?page=privacy" class="footer__policy-link">Політика конфіденційності</a>
                 <a href="./legal.html?page=terms" class="footer__policy-link">Умови використання</a>
