--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link id="favicon" rel="shortcut icon" href="./image/header/logo-skynetix-white.svg"> 
+    <link id="favicon" rel="shortcut icon" href="./image/header/logo-white.svg"> 
     <link rel="canonical" href="https://skynetix.com.ua">
     <title>Skynetix</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Наша мета — забезпечити захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://skynetix.com.ua">
-    <meta property="og:image" content="https://skynetix.com.ua/image/header/cover.jpg">
+    <meta property="og:image" content="https://skynetix.com.ua/image/header/cover-skynetix.jpg">
     <meta property="og:image:width" content="1020">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="uk_UA">
@@ -25,14 +25,14 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
     <meta name="twitter:description" content="Забезпечуємо захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
-    <meta name="twitter:image" content="https://skynetix.com.ua/image/header/cover.jpg">
+    <meta name="twitter:image" content="https://skynetix.com.ua/image/header/cover-skynetix.jpg">
 </head>
 <body>
     <header id="header">
         <nav>
-             <div class="logo">
-                <img src="./image/header/logo-skynetix-white.svg" alt="Skynetix Logo">
-             </div>
+             <a href="#hero" class="logo">
+                <img src="./image/header/logo-white.svg" alt="Skynetix Logo">
+             </a>
             <div class="nav-links">
                 <a href="#" data-section="hero">Головна</a>
                 <a href="#" data-section="about">Про нас</a>
@@ -42,9 +42,9 @@
                         Продукція <i class="ri-arrow-down-s-line"></i>
                     </button>
                     <div class="dropdown-menu" id="productsDropdown">
-                        <a href="./product.html?product=drones"><i class="ri-flight-takeoff-line"></i> Дрони</a>
-                        <a href="./product.html?product=reb"><i class="ri-radar-line"></i> Системи РЕБ</a>
-                        <a href="./product.html?product=skynetix2"><i class="ri-battery-charge-line"></i> Skynetix 2 + АКБ</a>
+                        <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Авто / Багатоканальний РЕБ</a>
+                        <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Мобільні та персональні РЕБ</a>
+                        <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ для керування</a>
                     </div>
                 </div>
 
@@ -66,9 +66,9 @@
             Продукція <i class="ri-arrow-down-s-line"></i>
         </button>
         <div class="mobile-products-list" id="mobileProductsList">
-            <a href="./product.html?product=drones"><i class="ri-flight-takeoff-line"></i> Дрони</a>
-            <a href="./product.html?product=reb"><i class="ri-radar-line"></i> Системи РЕБ</a>
-            <a href="./product.html?product=skynetix2"><i class="ri-battery-charge-line"></i> Skynetix 2 + АКБ</a>
+            <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Авто / Багатоканальний РЕБ</a>
+            <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Мобільні та персональні РЕБ</a>
+            <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ для керування</a>
         </div>
         </div>
 
@@ -81,7 +81,9 @@
 
             <div class="content" id="heroContent">
                 <h1>SKYNETIX</h1>
-                <p>Рішення у сфері передових оборонних технологій<br />Дрони • Системи РЕБ • Енергетичні рішення</p>
+                <p>Інновації для безпеки, керування та переваги</p>
+                <p>Рішення у сфері радіоелектронних технологій<br />РЕБ: мобільні, персональні, багатоканальні • ППРЧ</p>
+                
                 <div class="buttons">
                     <button class="primary" id="orderBtn">Замовити</button>
                     <button class="secondary" id="learnBtn">Дізнатись більше</button>
@@ -106,34 +108,31 @@
                 />
 
                 <div class="about-text" id="aboutText">
-                    <h3>Лідерство в інноваціях оборонних технологій</h3>
+                    <h3>Лідерство в інноваціях радіоелектронних технологій</h3>
                     <p>
-                    Skynetix стоїть на передовій у сфері оборонних технологій, спеціалізуючись на передових дронових системах,
-                    рішеннях радіоелектронної боротьби (РЕБ) та новітніх енергетичних системах. Наша місія —
-                    забезпечення надійних і інноваційних рішень як для військового, так і для цивільного використання.
+                    Skynetix — інноваційна компанія на передовій у сфері радіоелектронних технологій, яка спеціалізується на розробці сучасних систем радіоелектронної боротьби (РЕБ) та технологіях ППРЧ (перестрибування частот). Ми створюємо мобільні, персональні, багатоканальні та автомобільні РЕБ-рішення, здатні ефективно діяти в умовах складного електромагнітного середовища.
                     </p>
+                    <p>Наша місія — забезпечення ефективного радіоелектронного домінування через інноваційні та надійні технології, адаптовані як для військових, так і для спеціалізованих цивільних задач.</p>
                     <p>
-                    Заснована на принципах технологічної досконалості та операційної надійності, компанія розробляє
-                    рішення, перевірені в польових умовах, які відповідають жорстким вимогам сучасних оборонних операцій,
-                    дотримуючись найвищих стандартів якості та продуктивності.
+                    Заснована на принципах технологічної гнучкості, надійності та швидкої адаптації до нових загроз, Skynetix впроваджує рішення, перевірені в реальних умовах, і гарантує відповідність найвищим стандартам якості, безпеки та ефективності.
                     </p>
 
                     <div class="features-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon feature-innovation"><i class="ri-lightbulb-line"></i></div>
-                        <div class="feature-title">Інновації</div>
-                        <div class="feature-desc">Передові дослідження та розробки</div>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon feature-reliability"><i class="ri-shield-check-line"></i></div>
-                        <div class="feature-title">Надійність</div>
-                        <div class="feature-desc">Рішення, перевірені в полі</div>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon feature-global"><i class="ri-global-line"></i></div>
-                        <div class="feature-title">Глобальне охоплення</div>
-                        <div class="feature-desc">Розгортання по всьому світу</div>
-                    </div>
+                        <div class="feature-card">
+                            <div class="feature-icon feature-innovation"><i class="ri-lightbulb-line"></i></div>
+                            <div class="feature-title">Інновації</div>
+                            <div class="feature-desc">Передові дослідження та розробки</div>
+                        </div>
+                        <div class="feature-card">
+                            <div class="feature-icon feature-reliability"><i class="ri-shield-check-line"></i></div>
+                            <div class="feature-title">Надійність</div>
+                            <div class="feature-desc">Рішення, перевірені в полі</div>
+                        </div>
+                        <div class="feature-card">
+                            <div class="feature-icon feature-global"><i class="ri-global-line"></i></div>
+                            <div class="feature-title">Глобальне охоплення</div>
+                            <div class="feature-desc">Розгортання по всьому світу</div>
+                        </div>
                     </div>
                 </div>
                 </div>
@@ -182,33 +181,46 @@
                     <div class="contact-form-container">
                         <h3>Надішліть нам повідомлення</h3>
                         <form id="contactForm">
-                        <div class="input-group">
-                            <div>
-                                <label for="name">ПІБ *</label>
-                                <input type="text" id="name" name="name" placeholder="Ваше повне ім’я" required />
+                            <div class="input-group">
+                                <div>
+                                    <label for="name">ПІБ *</label>
+                                    <input type="text" id="name" name="name" placeholder="Ваше повне ім’я" required />
+                                </div>
+                                <div>
+                                    <label for="phone">Номер телефону *</label>
+                                    <input type="tel" id="phone" name="phone" placeholder="Ваш номер телефону" required />
+                                    <div class="error-message" id="error-phone"></div>
+                                </div>
                             </div>
-                            <div>
-                                <label for="phone">Номер телефону *</label>
-                                <input type="tel" id="phone" name="phone" placeholder="Ваш номер телефону" required />
-                                <div class="error-message" id="error-phone"></div>
+
+                            <div class="form-field">
+                                <label for="email">Email адреса *</label>
+                                <input type="email" id="email" name="email" placeholder="you@example.com" required />
+                                <div class="error-message" id="error-email"></div>
                             </div>
-                        </div>
+                            <div class="form-field form-field-category">
+                                <label for="category">Категорія продукту *</label>
+                                <select id="category" class="category-select" name="category" required>
+                                    <option value="" disabled selected hidden>Оберіть категорію</option>
+                                    <option value="Індивідуальне рішення">Індивідуальне рішення</option>
+                                    <option value="Авто / Багатоканальний РЕБ">Авто / Багатоканальний РЕБ</option>
+                                    <option value="Мобільні та персональні РЕБ">Мобільні та персональні РЕБ</option>
+                                    <option value="ППРЧ для керування">ППРЧ для керування</option>
+                                </select>
+                            </div>
+                            <div class="form-field form-field-subcategory" id="subcategory-container" style="display:none; margin-bottom: 16px;">
+                                <label for="subcategory">Виберіть продукт *</label>
+                                <select id="subcategory" class="category-select" name="subcategory" required></select>
+                            </div>
+                            <div class="form-field">
+                                <label for="comment">Повідомлення</label>
+                                <textarea id="comment" name="comment" placeholder="Опишіть ваш запит..." maxlength="500"></textarea>
+                                <div class="char-count" id="charCount">0/500 символів</div>
+                                <div class="error-message" id="error-comment"></div>
+                            </div>
 
-                        <div class="form-field">
-                            <label for="email">Email адреса *</label>
-                            <input type="email" id="email" name="email" placeholder="you@example.com" required />
-                            <div class="error-message" id="error-email"></div>
-                        </div>
-
-                        <div class="form-field">
-                            <label for="comment">Повідомлення</label>
-                            <textarea id="comment" name="comment" placeholder="Опишіть ваш запит..." maxlength="500"></textarea>
-                            <div class="char-count" id="charCount">0/500 символів</div>
-                            <div class="error-message" id="error-comment"></div>
-                        </div>
-
-                        <button type="submit" id="submitBtn" disabled>Надіслати</button>
-                        <div class="form-message" id="formMessage"></div>
+                            <button type="submit" id="submitBtn" disabled>Надіслати</button>
+                            <div class="form-message" id="formMessage"></div>
                         </form>
                     </div>
 
@@ -227,7 +239,7 @@
                         <div class="icon-box icon-box-phone"><i class="ri-phone-line icon-box__phone"></i></div>
                         <div>
                             <h4>Телефон</h4>
-                            <a href="tel:+380677593174" class="phone-link">+380 67 759 3174</a>
+                            <a href="https://wa.me/380677593174" class="phone-link">+380 67 759 3174</a>
                         </div>
                         </div>
                         <div class="info-box">
@@ -263,23 +275,23 @@
             <!-- Блок компанії -->
             <div class="footer__company">
                 <div class="footer__logo">
-                    <img src="./image/header/logo-skynetix-white.svg" alt="Skynetix Logo">
+                    <img src="./image/header/logo-white.svg" alt="Skynetix Logo">
                 </div>
                 <p class="footer__description">
-                Провідна компанія у сфері оборонних технологій, що спеціалізується на передових дрон-системах,
+                Група компанії у сфері оборонних технологій, що спеціалізується на передових дрон-системах,
                 рішеннях у сфері радіоелектронної боротьби та сучасних енергетичних системах для військових і цивільних потреб.
                 </p>
                 <div class="footer__socials">
-                <a href="#" class="footer__social-link" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/feed/" class="footer__social-link" aria-label="LinkedIn">
                     <i class="ri-linkedin-line"></i>
                 </a>
-                <a href="#" class="footer__social-link" aria-label="Twitter">
+                <a href="https://x.com/" class="footer__social-link" aria-label="Twitter">
                     <i class="ri-twitter-line"></i>
                 </a>
-                <a href="#" class="footer__social-link" aria-label="Facebook">
+                <a href="https://www.facebook.com/" class="footer__social-link" aria-label="Facebook">
                     <i class="ri-facebook-line"></i>
                 </a>
-                <a href="#" class="footer__social-link" aria-label="YouTube">
+                <a href="https://www.youtube.com/" class="footer__social-link" aria-label="YouTube">
                     <i class="ri-youtube-line"></i>
                 </a>
                 </div>
@@ -301,9 +313,9 @@
             <div class="footer__links">
                 <h3 class="footer__title">Продукти</h3>
                 <ul class="footer__list">
-                    <li><a href="./product.html?product=drones" class="footer__link">Передові дрони</a></li>
-                    <li><a href="./product.html?product=reb" class="footer__link">Системи РЕБ</a></li>
-                    <li><a href="./product.html?product=skynetix2" class="footer__link">Skynetix 2 + АКБ</a></li>
+                    <li><a href="./product.html?product=multi" class="footer__link">Авто / Багатоканальний РЕБ</a></li>
+                    <li><a href="./product.html?product=mobile" class="footer__link">Мобільні та персональні РЕБ</a></li>
+                    <li><a href="./product.html?product=control" class="footer__link">ППРЧ для керування</a></li>
                 </ul>
             </div>
             </div>
@@ -316,7 +328,7 @@
             </div>
             <div class="footer__contact-item">
                 <i class="ri-phone-line footer__icon footer__icon--green"></i>
-                <a href="tel:+380677593174">+380 67 759 3174</a>
+                <a href="https://wa.me/380677593174">+380 67 759 3174</a>
             </div>
             <div class="footer__contact-item">
                 <i class="ri-time-line footer__icon footer__icon--purple"></i>
@@ -326,7 +338,7 @@
 
             <!-- Нижній рядок -->
             <div class="footer__bottom-bar">
-            <p>© 2024 Skynetix Defense Technologies. Всі права захищені.</p>
+            <p>© 2024 Skynetix. Всі права захищені.</p>
             <div class="footer__policy-links">
                 <a href="./legal.html?page=privacy" class="footer__policy-link">Політика конфіденційності</a>
                 <a href="./legal.html?page=terms" class="footer__policy-link">Умови використання</a>
