--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="favicon" rel="shortcut icon" href="./image/header/logo-white.svg"> 
-    <link rel="canonical" href="https://skynetix.com.ua">
+    <link rel="canonical" href="https://skynetix.org">
     <title>Skynetix</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +16,8 @@
     <meta property="og:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
     <meta property="og:description" content="Наша мета — забезпечити захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://skynetix.com.ua">
-    <meta property="og:image" content="https://skynetix.com.ua/image/header/cover-skynetix.jpg">
+    <meta property="og:url" content="https://skynetix.org">
+    <meta property="og:image" content="https://skynetix.org/image/header/cover-skynetix.jpg">
     <meta property="og:image:width" content="1020">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="uk_UA">
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
     <meta name="twitter:description" content="Забезпечуємо захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
-    <meta name="twitter:image" content="https://skynetix.com.ua/image/header/cover-skynetix.jpg">
+    <meta name="twitter:image" content="https://skynetix.org/image/header/cover-skynetix.jpg">
 </head>
 <body>
     <header id="header">
