--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="favicon" rel="shortcut icon" href="./image/header/logo-white.svg"> 
-    <link rel="canonical" href="https://skynetix.com.ua">
+    <link rel="canonical" href="https://skynetix.org">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -17,8 +17,8 @@
     <meta property="og:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
     <meta property="og:description" content="Наша мета — забезпечити захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://skynetix.com.ua">
-    <meta property="og:image" content="https://skynetix.com.ua/image/header/cover.jpg">
+    <meta property="og:url" content="https://skynetix.org">
+    <meta property="og:image" content="https://skynetix.org/image/header/cover.jpg">
     <meta property="og:image:width" content="1020">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="uk_UA">
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
     <meta name="twitter:description" content="Забезпечуємо захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
-    <meta name="twitter:image" content="https://skynetix.com.ua/image/header/cover.jpg">
+    <meta name="twitter:image" content="https://skynetix.org/image/header/cover.jpg">
 </head>
 <body>
     <header id="header">
