--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/main.min.css">
 
-    <meta name="description" content="Skynetix — забезпечуємо наших захисників ефективними та надійними засобами радіоелектронної боротьби (РЕБ). Виготовляємо РЕБ-системи, дрони та Skynetix 2 + АКБ.">
-    <meta property="og:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
-    <meta property="og:description" content="Наша мета — забезпечити захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
+    <meta name="description" content="Skynetix — інноваційні рішення у сфері радіоелектронної боротьби: мобільні, персональні, багатоканальні РЕБ-системи та технології ППРЧ.">
+    <meta property="og:title" content="Skynetix — Передові рішення в РЕБ та ППРЧ">
+    <meta property="og:description" content="Розробляємо мобільні, персональні та багатоканальні системи РЕБ з підтримкою ППРЧ для радіоелектронного домінування в складних умовах.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://skynetix.org">
     <meta property="og:image" content="https://skynetix.org/image/header/cover-skynetix.jpg">
@@ -23,8 +23,8 @@
     <meta property="og:locale" content="uk_UA">
     <meta property="og:site_name" content="Skynetix">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
-    <meta name="twitter:description" content="Забезпечуємо захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
+    <meta name="twitter:title" content="Skynetix — Передові рішення в РЕБ та ППРЧ">
+    <meta name="twitter:description" content="Інноваційні технології РЕБ: мобільні, персональні, багатоканальні рішення та перестрибування частот (ППРЧ) для сучасних загроз.">
     <meta name="twitter:image" content="https://skynetix.org/image/header/cover-skynetix.jpg">
 </head>
 <body>
