--- a/legal.html
+++ b/legal.html
@@ -5,25 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="favicon" rel="shortcut icon" href="./image/header/logo-white.svg"> 
     <link rel="canonical" href="https://skynetix.org">
-    <title id="page-title">Правова інформація</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/legal.min.css">
+    <title>Skynetix</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/main.min.css">
 
-    <meta name="description" content="Skynetix — забезпечуємо наших захисників ефективними та надійними засобами радіоелектронної боротьби (РЕБ). Виготовляємо РЕБ-системи, дрони та Skynetix 2 + АКБ.">
-    <meta property="og:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
-    <meta property="og:description" content="Наша мета — забезпечити захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
+    <meta name="description" content="Skynetix — інноваційні рішення у сфері радіоелектронної боротьби: мобільні, персональні, багатоканальні РЕБ-системи та технології ППРЧ.">
+    <meta property="og:title" content="Skynetix — Передові рішення в РЕБ та ППРЧ">
+    <meta property="og:description" content="Розробляємо мобільні, персональні та багатоканальні системи РЕБ з підтримкою ППРЧ для радіоелектронного домінування в складних умовах.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://skynetix.org">
-    <meta property="og:image" content="https://skynetix.org/image/header/cover.jpg">
+    <meta property="og:image" content="https://skynetix.org/image/header/cover-skynetix.jpg">
     <meta property="og:image:width" content="1020">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="uk_UA">
     <meta property="og:site_name" content="Skynetix">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Skynetix — Передові рішення в РЕБ, дронах та енергетиці">
-    <meta name="twitter:description" content="Забезпечуємо захисників України ефективними та надійними засобами радіоелектронної боротьби, дронами та енергетичними системами.">
-    <meta name="twitter:image" content="https://skynetix.org/image/header/cover.jpg">
+    <meta name="twitter:title" content="Skynetix — Передові рішення в РЕБ та ППРЧ">
+    <meta name="twitter:description" content="Інноваційні технології РЕБ: мобільні, персональні, багатоканальні рішення та перестрибування частот (ППРЧ) для сучасних загроз.">
+    <meta name="twitter:image" content="https://skynetix.org/image/header/cover-skynetix.jpg">
 </head>
 <body class="bg-gray-900 text-white">
 
