--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/product.min.css">
 
     <meta name="description" content="Skynetix — інноваційні рішення у сфері радіоелектронної боротьби: мобільні, персональні, багатоканальні РЕБ-системи та технології ППРЧ.">
     <meta property="og:title" content="Skynetix — Передові рішення в РЕБ та ППРЧ">
