--- a/legal.html
+++ b/legal.html
@@ -177,7 +177,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="./js/legal.js"></script>
 </body>
 </html>
