--- a/legal.html
+++ b/legal.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="favicon" rel="shortcut icon" href="./image/header/logo-white.svg"> 
     <link rel="canonical" href="https://skynetix.org">
-    <title>Skynetix</title>
+    <title>Правова інформація</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -177,7 +178,6 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="./js/legal.js"></script>
 </body>
 </html>
