--- a/legal.html
+++ b/legal.html
@@ -109,8 +109,7 @@
                     <img src="./image/header/logo-white.svg" alt="Skynetix Logo">
                 </div>
                 <p class="footer__description">
-                Група компанії у сфері оборонних технологій, що спеціалізується на передових дрон-системах,
-                рішеннях у сфері радіоелектронної боротьби та сучасних енергетичних системах для військових і цивільних потреб.
+                Група компаній у сфері радіоелектронних технологій, що створює сучасні системи РЕБ та ППРЧ для військових і цивільних застосувань.
                 </p>
                 <div class="footer__socials">
                 <a href="https://www.linkedin.com/feed/" class="footer__social-link" aria-label="LinkedIn">
