--- a/legal.html
+++ b/legal.html
@@ -44,9 +44,9 @@
                         Продукція <i class="ri-arrow-down-s-line"></i>
                     </button>
                     <div class="dropdown-menu" id="productsDropdown">
-                        <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Авто / Багатоканальний РЕБ</a>
-                        <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Мобільні та персональні РЕБ</a>
-                        <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ для керування</a>
+                        <a target="_blank" href="./product.html?product=multi"><i class="ri-truck-line"></i>Багатоканальні РЕБ</a>
+                        <a target="_blank" href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Персональні РЕБ</a>
+                        <a target="_blank" href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ та детектування</a>
                     </div>
                 </div>
 
@@ -64,14 +64,14 @@
         <a href="./index.html#about" data-section="about">Про нас</a>
 
         <div>
-        <button class="mobile-products-toggle" id="mobileProductsToggle">
-            Продукція <i class="ri-arrow-down-s-line"></i>
-        </button>
-        <div class="mobile-products-list" id="mobileProductsList">
-            <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Авто / Багатоканальний РЕБ</a>
-            <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Мобільні та персональні РЕБ</a>
-            <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ для керування</a>
-        </div>
+            <button class="mobile-products-toggle" id="mobileProductsToggle">
+                Продукція <i class="ri-arrow-down-s-line"></i>
+            </button>
+            <div class="mobile-products-list" id="mobileProductsList">
+                <a target="_blank" href="./product.html?product=multi"><i class="ri-truck-line"></i>Багатоканальні РЕБ</a>
+                <a target="_blank" href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Персональні РЕБ</a>
+                <a target="_blank" href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ та детектування</a>
+            </div>
         </div>
 
         <a href="./index.html#why-skynetix" data-section="why-skynetix">Чому Skynetix</a>
@@ -131,11 +131,11 @@
             <div class="footer__links">
                 <h3 class="footer__title">Швидкі посилання</h3>
                 <ul class="footer__list">
-                <li><a href="#hero" class="footer__link">Головна</a></li>
-                <li><a href="#about" class="footer__link">Про нас</a></li>
-                <li><a href="#" class="footer__link">Продукція</a></li>
-                <li><a href="#why-skynetix" class="footer__link">Чому Skynetix</a></li>
-                <li><a href="#contact" class="footer__link">Контакти</a></li>
+                    <li><a target="_blank" href="./index.html#hero" class="footer__link">Головна</a></li>
+                    <li><a target="_blank" href="./index.html#about" class="footer__link">Про нас</a></li>
+                    <li><a target="_blank" href="#" class="footer__link">Продукція</a></li>
+                    <li><a target="_blank" href="./index.html#why-skynetix" class="footer__link">Чому Skynetix</a></li>
+                    <li><a target="_blank" href="./index.html#contact" class="footer__link">Контакти</a></li>
                 </ul>
             </div>
 
@@ -143,9 +143,9 @@
             <div class="footer__links">
                 <h3 class="footer__title">Продукти</h3>
                 <ul class="footer__list">
-                    <li><a href="./product.html?product=multi" class="footer__link">Авто / Багатоканальний РЕБ</a></li>
-                    <li><a href="./product.html?product=mobile" class="footer__link">Мобільні та персональні РЕБ</a></li>
-                    <li><a href="./product.html?product=control" class="footer__link">ППРЧ для керування</a></li>
+                    <li><a target="_blank" href="./product.html?product=multi" class="footer__link">Багатоканальні РЕБ</a></li>
+                    <li><a target="_blank" href="./product.html?product=mobile" class="footer__link">Персональні РЕБ</a></li>
+                    <li><a target="_blank" href="./product.html?product=control" class="footer__link">ППРЧ та детектування</a></li>
                 </ul>
             </div>
             </div>
@@ -170,9 +170,9 @@
             <div class="footer__bottom-bar">
             <p>© 2024 Skynetix. Всі права захищені.</p>
             <div class="footer__policy-links">
-                <a href="./legal.html?page=privacy" class="footer__policy-link">Політика конфіденційності</a>
-                <a href="./legal.html?page=terms" class="footer__policy-link">Умови використання</a>
-                <a href="./legal.html?page=security" class="footer__policy-link">Безпека</a>
+                <a target="_blank" href="./legal.html?page=privacy" class="footer__policy-link">Політика конфіденційності</a>
+                <a target="_blank" href="./legal.html?page=terms" class="footer__policy-link">Умови використання</a>
+                <a target="_blank" href="./legal.html?page=security" class="footer__policy-link">Безпека</a>
             </div>
             </div>
         </div>
