--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <ul class="footer__list">
                 <li><a href="#hero" class="footer__link">Головна</a></li>
                 <li><a href="#about" class="footer__link">Про нас</a></li>
-                <li><a href="#" class="footer__link">Продукція</a></li>
+                <li><a href="#products" class="footer__link">Продукція</a></li>
                 <li><a href="#why-skynetix" class="footer__link">Чому Skynetix</a></li>
                 <li><a href="#contact" class="footer__link">Контакти</a></li>
                 </ul>
