--- a/legal.html
+++ b/legal.html
@@ -133,7 +133,7 @@
                 <ul class="footer__list">
                     <li><a href="./index.html#hero" class="footer__link">Головна</a></li>
                     <li><a href="./index.html#about" class="footer__link">Про нас</a></li>
-                    <li><a href="#" class="footer__link">Продукція</a></li>
+                    <li><a href="./index.html#products" class="footer__link">Продукція</a></li>
                     <li><a href="./index.html#why-skynetix" class="footer__link">Чому Skynetix</a></li>
                     <li><a href="./index.html#contact" class="footer__link">Контакти</a></li>
                 </ul>
