--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         Продукція <i class="ri-arrow-down-s-line"></i>
                     </button>
                     <div class="dropdown-menu" id="productsDropdown">
-                        <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Багатоканальні РЕБ</a>
+                        <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Багатоканальні та мобільні РЕБ</a>
                         <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Персональні РЕБ</a>
                         <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ та детектування</a>
                     </div>
@@ -66,7 +66,7 @@
                 Продукція <i class="ri-arrow-down-s-line"></i>
             </button>
             <div class="mobile-products-list" id="mobileProductsList">
-                <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Багатоканальні РЕБ</a>
+                <a href="./product.html?product=multi"><i class="ri-truck-line"></i>Багатоканальні та мобільні РЕБ</a>
                 <a href="./product.html?product=mobile"><i class="ri-user-settings-line"></i>Персональні РЕБ</a>
                 <a href="./product.html?product=control"><i class="ri-wifi-line"></i>ППРЧ та детектування</a>
             </div>
@@ -318,7 +318,7 @@
             <div class="footer__links">
                 <h3 class="footer__title">Продукти</h3>
                 <ul class="footer__list">
-                    <li><a href="./product.html?product=multi" class="footer__link">Багатоканальні РЕБ</a></li>
+                    <li><a href="./product.html?product=multi" class="footer__link">Багатоканальні та мобільні РЕБ</a></li>
                     <li><a href="./product.html?product=mobile" class="footer__link">Персональні РЕБ</a></li>
                     <li><a href="./product.html?product=control" class="footer__link">ППРЧ та детектування</a></li>
                 </ul>
